[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/plant/plant.glb" type="PackedScene" id=1]
[ext_resource path="res://plant/PlantMesh.gd" type="Script" id=2]
[ext_resource path="res://assets/plant/Fruit.material" type="Material" id=3]
[ext_resource path="res://assets/plant/LeafShader.tres" type="Material" id=4]
[ext_resource path="res://assets/plant/LeafGlowShader.material" type="Material" id=5]

[sub_resource type="Animation" id=1]
resource_name = "spin"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fruit:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
gravity = Vector3( 0, 0, 0 )
radial_accel = -65.0
tangential_accel = -65.0
damping = 60.0

[sub_resource type="CubeMesh" id=3]
material = ExtResource( 3 )
size = Vector3( 0.1, 0.1, 0.1 )

[node name="PlantMesh" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="." index="0"]

[node name="Leafs" parent="." index="3"]
material/0 = ExtResource( 5 )
material/1 = ExtResource( 4 )

[node name="Cube010" parent="." index="4"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1.86832, 3.5053, 0.719421 )

[node name="Cube011" parent="." index="5"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.73509, 2.68407, -1.19446 )

[node name="Cube012" parent="." index="6"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.61543, 3.69327, 0.997212 )

[node name="Cube013" parent="." index="7"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.56642, 2.94319, -0.0161401 )

[node name="Cube014" parent="." index="8"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.744435, 1.90671, 1.7042 )

[node name="Cube015" parent="." index="9"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.956532, 1.90671, 0.855814 )

[node name="Cube016" parent="." index="10"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.784267, 3.22351, -1.00024 )

[node name="FruitSpin" type="AnimationPlayer" parent="." index="12"]
autoplay = "spin"
anims/spin = SubResource( 1 )

[node name="FruitParticles" type="Particles" parent="." index="13"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.41967, 0 )
lifetime = 2.0
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
